# 1553BAnalyzer

./: .gitignore  .qmake.stash  1553BAnalyzer.pro  CMakeLists.txt  README.md  需求说明书.md
1553BAnalyzer/: .gitignore  1553BAnalyzer.pro  README.md  用户使用说明书.docx  需求说明书.md
1553BAnalyzer/docs/: 测试用例.md  自然语言筛选功能测试用例.md  需求说明书.md
1553BAnalyzer/libs/vosk/include/: vosk_api.h
1553BAnalyzer/resources/: resources.qrc
1553BAnalyzer/resources/config/: config.xml
1553BAnalyzer/src/: main.cpp
1553BAnalyzer/src/ai/: AIToolDefinitions.h  AIToolExecutor.cpp  AIToolExecutor.h
1553BAnalyzer/src/core/analysis/: TimeIntervalAnalyzer.cpp  TimeIntervalAnalyzer.h
1553BAnalyzer/src/core/config/: ConfigManager.cpp  ConfigManager.h  XmlConfigParser.cpp  XmlConfigParser.h
1553BAnalyzer/src/core/datastore/: DataModel.cpp  DataModel.h  DataStore.cpp  DataStore.h  DatabaseManager.cpp  DatabaseManager.h  FilterExpression.cpp  FilterExpression.h  TestDataGenerator.cpp  TestDataGenerator.h
1553BAnalyzer/src/core/parser/: BinaryParser.cpp  BinaryParser.h  PacketDecoder.h  PacketStruct.h
1553BAnalyzer/src/export/: CsvExporter.cpp  CsvExporter.h  ExportService.cpp  ExportService.h
1553BAnalyzer/src/model/: ModelAdapter.cpp  ModelAdapter.h  ModelManager.cpp  ModelManager.h
1553BAnalyzer/src/model/providers/: DeepSeekProvider.cpp  DeepSeekProvider.h  KimiProvider.cpp  KimiProvider.h  OllamaProvider.cpp  OllamaProvider.h  QwenProvider.cpp  QwenProvider.h
1553BAnalyzer/src/report/: ReportGenerator.cpp  ReportGenerator.h
1553BAnalyzer/src/speech/: AudioCapture.cpp  AudioCapture.h  SpeechRecognizer.cpp  SpeechRecognizer.h  VoskEngine.cpp  VoskEngine.h
1553BAnalyzer/src/ui/chartview/: ChartWidget.cpp  ChartWidget.h
1553BAnalyzer/src/ui/dialogs/: HexViewDialog.cpp  HexViewDialog.h  LoadingDialog.cpp  LoadingDialog.h  ProgressDialog.cpp  ProgressDialog.h  SettingsDialog.cpp  SettingsDialog.h
1553BAnalyzer/src/ui/ganttview/: GanttItem.cpp  GanttItem.h  GanttScene.cpp  GanttScene.h  GanttView.cpp  GanttView.h
1553BAnalyzer/src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
1553BAnalyzer/src/ui/styles/: dark_theme.qss
1553BAnalyzer/src/ui/tableview/: TableModel.h  TableView.cpp  TableView.h
1553BAnalyzer/src/ui/widgets/: AIQueryPanel.cpp  AIQueryPanel.h  FileListPanel.cpp  FileListPanel.h  PaginationWidget.cpp  PaginationWidget.h
1553BAnalyzer/src/utils/: ByteConverter.h  Logger.cpp  Logger.h  Qt5Compat.h  TimeConverter.h
data/old/: xin-1.data  xin-1_copy_6W.data
docs/: 测试用例.md  测试结果.md  需求说明书.md
resources/: app.rc
resources/config/: config.xml
src/: main.cpp
src/ai/: AIToolDefinitions.h  AIToolExecutor.cpp  AIToolExecutor.h
src/core/config/: ConfigManager.cpp  ConfigManager.h  XmlConfigParser.cpp  XmlConfigParser.h
src/core/datastore/: DataModel.cpp  DataModel.h  DataStore.cpp  DataStore.h  DatabaseManager.cpp  DatabaseManager.h  FilterExpression.cpp  FilterExpression.h  TestDataGenerator.cpp  TestDataGenerator.h
src/core/parser/: BinaryParser.cpp  BinaryParser.h  PacketDecoder.h  PacketStruct.h
src/export/: CsvExporter.cpp  CsvExporter.h  ExportService.cpp  ExportService.h
src/model/: ModelAdapter.cpp  ModelAdapter.h  ModelManager.cpp  ModelManager.h
src/model/providers/: DeepSeekProvider.cpp  DeepSeekProvider.h  KimiProvider.cpp  KimiProvider.h  OllamaProvider.cpp  OllamaProvider.h  QwenProvider.cpp  QwenProvider.h
src/report/: ReportGenerator.cpp  ReportGenerator.h
src/ui/chartview/: ChartWidget.cpp  ChartWidget.h
src/ui/dialogs/: HexViewDialog.cpp  HexViewDialog.h  ProgressDialog.cpp  ProgressDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/ganttview/: GanttItem.cpp  GanttItem.h  GanttScene.cpp  GanttScene.h  GanttView.cpp  GanttView.h
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h  MainWindow_test.cpp  test2.txt
src/ui/tableview/: TableModel.h  TableView.cpp  TableView.h
src/ui/widgets/: AIQueryPanel.cpp  AIQueryPanel.h  FileListPanel.cpp  FileListPanel.h  PaginationWidget.cpp  PaginationWidget.h
src/utils/: ByteConverter.h  Logger.cpp  Logger.h  TimeConverter.h
